make content in layout take space and no overflow

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -4,3 +4,11 @@
 
 @import 'reset';
 @import 'components/test-component';
+
+#root, html, body , body > div {
+    height: 100%;
+    width: 100%;
+    margin: 0px;
+    overflow: hidden;
+    text-underline-position: under;
+}
